--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "@babel/preset-react": "^7.13.13",
     "@jscad/cli": "^2.2.0",
     "@jscad/core": "^2.3.0",
+    "@jscad/io-utils": "^2.0.2",
     "@jscad/modeling": "^2.2.0",
     "@jscad/regl-renderer": "^2.1.0",
+    "@jscad/stl-serializer": "^2.0.3",
     "babelify": "^10.0.0",
+    "bootstrap": "^4.6.0",
     "csvtojson": "^2.0.10",
     "gl": "^4.9.0",
     "jscad-react": "^0.1.6",
     "react": "^17.0.2",
-    "react-compound-slider": "^3.3.1",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-use-gesture": "^9.1.3",
