--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@babel/preset-react": "^7.13.13",
     "@jscad/cli": "^2.2.0",
     "@jscad/core": "^2.3.0",
-    "@jscad/io-utils": "^2.0.2",
     "@jscad/modeling": "^2.2.0",
     "@jscad/regl-renderer": "^2.1.0",
     "@jscad/stl-serializer": "^2.0.3",
@@ -28,7 +27,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.0.9",
     "react-use-gesture": "^9.1.3",
     "stream": "0.0.2"
   },
